--- a/tests/test1.html
+++ b/tests/test1.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML><HEAD>
 
-<STYLE type="text/css">
-.ser_num { display: none }
-</STYLE>
+
 <style type="text/css">
 .alarming { background-color: red }
 </style>
@@ -92,7 +90,7 @@ function do_presel(sr_rows, sw_rows) {
 Powered by <a href="http://www.rocksbarbque.com">Rock's Bar-B-Que</a><br />
 Software by kaytat, Version
 
-2.0.259
+2.1.287
 </p>
 <script type="text/javascript">
 <!--
@@ -100,7 +98,6 @@ document.write(Date() + "<br /><b>Temperatures in F</b>");
 //-->
 </script>
 </td>
-
 <td align="right">
 <table BORDER="2" CELLPADDING="5">
 <tr><td class="ser_num"><b>Blower</b></td>
@@ -115,7 +112,6 @@ document.write(Date() + "<br /><b>Temperatures in F</b>");
 </td>
 </tr>
 <tr>
-
 <td colspan="2">
 <table BORDER="2" CELLPADDING="5">
 <tr>
@@ -126,38 +122,35 @@ document.write(Date() + "<br /><b>Temperatures in F</b>");
 <td><b>Alarm</b></td>
 <td><b>Low Set</b></td>
 <td><b>High Set</b></td>
-
 <td><b>Blower</b></td>
 </tr>
 
-<tr><td colspan="7"><b>Control Sensors</b></td></tr>
-<tr>
+<tr><td colspan="8"><b>Control Sensors</b></td></tr>
+<tr class="alarming">
 <td class="ser_num">440000112A621E30</td>
 <td><input size="16" maxLength="32" name="n1440000112A621E30" value="Pit Temp        "></td>
-<td>107.2</td>
-<td><input size="6" maxLength="6" name="ta440000112A621E30" value="450"></td>
+<td>72.2</td>
+<td><input size="6" maxLength="6" name="ta440000112A621E30" value="72"></td>
 <td><select name="al440000112A621E30" onchange="do_disable(0, 0)">
 <option value="0">None
 <option value="1">Food
 <option value="2">Fire
-
 </select>
 </td>
-<td><input size="6" maxLength="6" name="tl440000112A621E30" value="32"></td>
-<td><input size="6" maxLength="6" name="th440000112A621E30" value="32"></td>
+<td><input size="6" maxLength="6" name="tl440000112A621E30" value="0"></td>
+<td><input size="6" maxLength="6" name="th440000112A621E30" value="0"></td>
 <td><select name="sw440000112A621E30">
 <option value="None">None
 <option value="140000002AA65105">Fan             
 </select>
 </td>
 </tr>
-<tr><td colspan="7"><b>Alarm Sensors</b></td></tr>
+<tr><td colspan="8"><b>Alarm Sensors</b></td></tr>
 <tr>
 <td class="ser_num">0E0000112A5D1630</td>
-<td><input size="16" maxLength="32" name="n10E0000112A5D1630" value="temp1           "></td>
-<td>64.6</td>
-
-<td><input size="6" maxLength="6" name="ta0E0000112A5D1630" value="95"></td>
+<td><input size="16" maxLength="32" name="n10E0000112A5D1630" value="Blue            "></td>
+<td>76.9</td>
+<td><input size="6" maxLength="6" name="ta0E0000112A5D1630" value="140"></td>
 <td><select name="al0E0000112A5D1630" onchange="do_disable(1, 0)">
 <option value="0">None
 <option value="1">Food
@@ -165,20 +158,18 @@ document.write(Date() + "<br /><b>Temperatures in F</b>");
 </select>
 </td>
 <td><input size="6" maxLength="6" name="tl0E0000112A5D1630" value="32"></td>
-<td><input size="6" maxLength="6" name="th0E0000112A5D1630" value="95"></td>
+<td><input size="6" maxLength="6" name="th0E0000112A5D1630" value="344"></td>
 <td><select name="sw0E0000112A5D1630">
 <option value="None">None
 <option value="140000002AA65105">Fan             
 </select>
 </td>
 </tr>
-<tr><td colspan="7"><b>Monitoring Sensors</b></td></tr>
-
 <tr>
 <td class="ser_num">530000112A584E30</td>
-<td><input size="16" maxLength="32" name="n1530000112A584E30" value="temp2           "></td>
-<td>65.9</td>
-<td><input size="6" maxLength="6" name="ta530000112A584E30" value="32"></td>
+<td><input size="16" maxLength="32" name="n1530000112A584E30" value="Yellow          "></td>
+<td>75.8</td>
+<td><input size="6" maxLength="6" name="ta530000112A584E30" value="76"></td>
 <td><select name="al530000112A584E30" onchange="do_disable(2, 0)">
 <option value="0">None
 <option value="1">Food
@@ -189,23 +180,22 @@ document.write(Date() + "<br /><b>Temperatures in F</b>");
 <td><input size="6" maxLength="6" name="th530000112A584E30" value="32"></td>
 <td><select name="sw530000112A584E30">
 <option value="None">None
-
 <option value="140000002AA65105">Fan             
 </select>
 </td>
 </tr>
+<tr><td colspan="8"><b>Monitoring Sensors</b></td></tr>
 <tr>
 <td class="ser_num">9C00001195DEE430</td>
-<td><input size="16" maxLength="32" name="n19C00001195DEE430" value="temp3           "></td>
-<td>72.6</td>
-<td><input size="6" maxLength="6" name="ta9C00001195DEE430" value="180"></td>
-<td><select name="al9C00001195DEE430" onchange="do_disable(3, 0)">
+<td><input size="16" maxLength="32" name="n19C00001195DEE430" value="Red             "></td>
+<td>74.6</td>
+<td><input size="6" maxLength="6" name="ta9C00001195DEE430" value="130"></td>
+<td><select name="al9C00001195DEE430" onchange="do_disable(2, 0)">
 <option value="0">None
 <option value="1">Food
 <option value="2">Fire
 </select>
 </td>
-
 <td><input size="6" maxLength="6" name="tl9C00001195DEE430" value="32"></td>
 <td><input size="6" maxLength="6" name="th9C00001195DEE430" value="32"></td>
 <td><select name="sw9C00001195DEE430">
@@ -216,9 +206,9 @@ document.write(Date() + "<br /><b>Temperatures in F</b>");
 </tr>
 <SCRIPT type="text/javascript">
 <!--
-var sel = [0,"140000002AA65105",2,"",0,"",0,""];
+var sel = [2,"140000002AA65105",1,"",1,"",0,""];
 var sw_id = ["140000002AA65105"];
-var check = false
+var check = true
 //-->
 </script>
 
@@ -226,7 +216,6 @@ var check = false
 <td class="ser_num"><b>Temp Sensor</b></td>
 <td><b>Description</b></td>
 <td><b>Temp</b></td>
-
 <td><b>Target</b></td>
 <td><b>Alarm</b></td>
 <td><b>Low Set</b></td>
@@ -239,7 +228,6 @@ var check = false
 <tr>
 <td colspan="2">
 <br />
-
 <input type="checkbox" name="q_show_ser" />Show serial numbers<br />
 <INPUT TYPE="submit" VALUE="Save Changes" />
 </td>
@@ -256,5 +244,4 @@ var check = false
 </table>
 </form>
 </BODY>
-
 </HTML>
